--- a/assets/stylesheets/layout/_pages.scss
+++ b/assets/stylesheets/layout/_pages.scss
@@ -3,4 +3,20 @@
 	margin: 0 0 1.5em;
 }
 
+.archive .page-header {
+	border-bottom: 2px solid $color__neutral;
+	margin-bottom: $size__site-gutter*2;
+}
+
+.archive article {
+	border-bottom: 1px solid transparentize($color__neutral, 0.5);
+	padding: $size__site-gutter*2 0;
+	margin: 0;
+}
+
+.nix-prefix {
+	@include small-caps;
+	display: block;
+}
+
 @import "../components/learn-more";
