--- a/assets/stylesheets/layout/_posts.scss
+++ b/assets/stylesheets/layout/_posts.scss
@@ -3,7 +3,7 @@
 }
 
 .hentry {
-	margin: 0 0 1.5em;
+	margin: 0 0 $size__site-gutter*4;
 }
 
 .byline,
@@ -19,10 +19,8 @@
 
 /* Header */
 .entry-meta {
-	font-weight: 600;
-	font-size: 0.85rem;
-	text-transform: uppercase;
-	letter-spacing: 0.5px;
+	@include small-caps;
+	//font-weight: 600;
 	line-height: 1.2;
 
 	a {
