--- a/assets/stylesheets/mixins/_mixins-base.scss
+++ b/assets/stylesheets/mixins/_mixins-base.scss
@@ -26,7 +26,7 @@
 // Small-caps text style.
 @mixin small-caps() {
 	@include font-size(0.85);
-	font-weight: 400;
+	font-weight: 600;
 	letter-spacing: 0.5px;
 	text-transform: uppercase;
 }
